--- a/apps/skooog/assets/package.json
+++ b/apps/skooog/assets/package.json
@@ -2,7 +2,13 @@
   "name": "skooog",
   "version": "0.0.1",
   "repository": {},
+  "scripts": {
+    "deploy": "brunch build --production",
+    "watch": "brunch watch --stdin"
+  },
   "dependencies": {
+    "phoenix": "file:../../../deps/phoenix",
+    "phoenix_html": "file:../../../deps/phoenix_html",
     "babel-brunch": "~6.0.0",
     "brunch": "~2.1.3",
     "clean-css-brunch": "~1.8.0",
