--- a/apps/skooog/assets/package.json
+++ b/apps/skooog/assets/package.json
@@ -9,11 +9,16 @@
   "dependencies": {
     "phoenix": "file:../../../deps/phoenix",
     "phoenix_html": "file:../../../deps/phoenix_html",
-    "babel-brunch": "~6.0.0",
-    "brunch": "~2.1.3",
+    "brunch": "^2",
+    "babel-brunch": "^6",
+    "postcss-brunch": "^2",
+    "sass-brunch": "^2",
+    "uglify-js-brunch": "^2",
+    "autoprefixer": "^6",
+    "babel-preset-react": "^6",
+    "babel-preset-latest": "^6",
     "clean-css-brunch": "~1.8.0",
     "css-brunch": "~1.7.0",
-    "javascript-brunch": "~1.8.0",
-    "uglify-js-brunch": "~1.7.0"
+    "javascript-brunch": "~1.8.0"
   }
 }
